# SellerIntelligence

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md
apps/api/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_create_platform_schema.py  0002_create_ingestion_schema.py  0003_add_auth_resolution_read_policy.py
apps/api/src/seller_intelligence/: main.py
apps/api/src/seller_intelligence/config/: settings.py
apps/api/src/seller_intelligence/modules/ingestion/: __init__.py
apps/api/src/seller_intelligence/modules/platform/: __init__.py
apps/api/src/seller_intelligence/shared/domain/: base.py  exceptions.py
apps/api/src/seller_intelligence/shared/infrastructure/: celery_app.py  db.py  di.py  event_bus.py  logging_config.py  orm_base.py  outbox.py  outbox_models.py  rate_limiter.py  tenant_context.py
apps/api/src/seller_intelligence/shared/interface/: error_handling.py
apps/api/src/seller_intelligence/shared/security/: dependencies.py  encryption.py  jwt.py  mfa.py  password.py
apps/api/tests/: conftest.py
apps/api/tests/factories/: ingestion_factories.py  platform_factories.py
apps/api/tests/fakes/: fake_ingestion_port.py  in_memory_ingestion_repositories.py  in_memory_repositories.py  rate_limiter.py
apps/api/tests/integration/: conftest.py
apps/api/tests/integration/modules/ingestion/: test_multi_tenant_isolation.py
apps/api/tests/integration/modules/platform/: test_auth_rls_resolution.py  test_multi_tenant_isolation.py  test_outbox.py  test_pooling_isolation.py
apps/api/tests/unit/shared/infrastructure/: test_rate_limiter.py
docs/: 01-product-vision.md  (+16 more)
(+43 files in other folders)
