[project]
name = "seller-intelligence-api"
version = "0.1.0"
description = "Seller Intelligence — API backend (FastAPI / Modular Monolith)"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.5",
    "python-jose[cryptography]>=3.3",
    "cryptography>=43",
    "argon2-cffi>=23.1",
    "pyotp>=2.9",
    "redis>=5.1",
    "celery>=5.4",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "black>=24.0",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "testcontainers[postgres]>=4.8",
    "fakeredis[lua]>=2.26",
    "pip-audit>=2.7",
    "types-python-jose>=3.3",
    "celery-types>=0.22",
]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.flake8-bugbear]
# Depends()/Query()/etc. em default de parâmetro é o padrão idiomático do FastAPI, não o
# antipattern de "mutable default" que B008 detecta em geral.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]

[tool.mypy]
python_version = "3.13"
strict = true
exclude = ["tests/", "alembic/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
